resolve issue with making game not visible still have images to fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -240,27 +240,27 @@ footer{
     border-radius: 0.6em;
     box-shadow: 0 0.9em 2.8em rgba(86, 66, 0, 0.2);
   }
-.game-container {
+  .game-container {
     position: relative;
     width: 100%;
     display: grid;
     gap: 0.6em;
   }
-.stats-container {
+  .stats-container {
     text-align: right;
     margin-bottom: 1.2em;
   }
-.stats-container span {
+  .stats-container span {
     font-weight: 600;
   }
-.card-container {
+  .card-container {
     position: relative;
     width: 6.25em;
     height: 6.25em;
     cursor: pointer;
   }
-.card-before,
-.card-after {
+  .card-before,
+  .card-after {
     position: absolute;
     border-radius: 5px;
     width: 100%;
@@ -271,16 +271,53 @@ footer{
     border: 4px solid #000000;
     transition: transform 0.7s ease-out;
     backface-visibility: hidden;
-}
-.card-before {
+  }
+  .card-before {
     background-color: #f4c531;
     font-size: 2.8em;
     font-weight: 600;
   }
-.card-after {
+  .card-after {
     background-color: #ffffff;
     transform: rotateY(180deg);
   }
-.card-container.flipped .card-before {
+  .card-container.flipped .card-before {
     transform: rotateY(180deg);
+  }
+  .card-container.flipped .card-after {
+    transform: rotateY(0deg);
+  }
+  .controls-container {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    top: 0;
+  }
+  #stop {
+    font-size: 1.1em;
+    display: block;
+    margin: 1.1em auto 0 auto;
+    background-color: #000000;
+    color: #ffffff;
+  }
+  .controls-container button {
+    font-size: 1.3em;
+    box-shadow: 0 0.6em 2em rgba(86, 66, 0, 0.2);
+  }
+  .hide {
+    display: none;
+  }
+  #result {
+    text-align: center;
+  }
+  #result h2 {
+    font-size: 2.5em;
+  }
+  #result h4 {
+    font-size: 1.8em;
+    margin: 0.6em 0 1em 0;
   }
